# Beautiful-Chess

./: Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  Empty.cpp  Empty.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  README.md  Rook.cpp  Rook.h  main.cpp
